Added Discounts for Users by Type of Products and User